Stop button text overflowing on IE.

--- a/packages/editor/src/components/post-permalink/style.scss
+++ b/packages/editor/src/components/post-permalink/style.scss
@@ -56,7 +56,7 @@
 	color: $dark-gray-200;
 	text-decoration: underline;
 	margin-right: 10px;
-	width: 100%;
+	flex-grow: 1;
 	overflow: hidden;
 	position: relative;
 	white-space: nowrap;
